# MSD-2-Dissertation

./: .gitignore  ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_STATUS.md  DOCUMENTATION_INDEX.md  EVALUATION.md  IMPLEMENTATION_PLAN.md  PRIVACY_SECURITY.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  RUST_LIBRARY_SPEC.md  SETUP_GUIDE.md  THESIS_OUTLINE.md  build-rust.ps1  build-rust.sh  check-env.ps1  clean.ps1
android/: gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/pavlova/: MainActivity.kt  PavlovaApplication.kt
android/app/src/main/java/com/pavlova/data/dao/: FilterEventDao.kt
android/app/src/main/java/com/pavlova/data/database/: PavlovaDatabase.kt
android/app/src/main/java/com/pavlova/data/model/: FilterEvent.kt
android/app/src/main/java/com/pavlova/data/repository/: FilterEventRepository.kt
android/app/src/main/java/com/pavlova/ml/: FrameProcessor.kt  RustMLBridge.kt
android/app/src/main/java/com/pavlova/overlay/: OverlayManager.kt
android/app/src/main/java/com/pavlova/permissions/: PermissionManager.kt
android/app/src/main/java/com/pavlova/services/: ScreenCaptureService.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
android/app/src/main/res/mipmap-xxhdpi/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  data_extraction_rules.xml  file_paths.xml
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: config.rs  image.rs  inference.rs  lib.rs  utils.rs
scripts/: convert_model.py
(+3 files in other folders)
