[package]
name = "pavlova-core"
version = "0.1.0"
edition = "2021"
authors = ["Pavlova Team"]
description = "Privacy-preserving ML inference and image processing for Android"

[lib]
name = "pavlova_core"
crate-type = ["cdylib"]

[features]
default = ["android"]
android = ["jni", "android_logger", "lazy_static"]

[dependencies]
# ML inference - tract (pure Rust, no C dependencies)
tract-onnx = "0.21"
tract-core = "0.21"

# Logging
log = "0.4"

# Optional: JNI / Android (enabled by default via "android" feature)
jni = { version = "0.21", optional = true }
android_logger = { version = "0.13", optional = true }
lazy_static = { version = "1.4", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
